ADD : 회원 탈퇴 기능 구현

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -333,6 +333,46 @@
             </LinearLayout>
             <!-- LAYOUT END 메뉴 레이아웃 (불편 사항 접수 목록) -->
 
+            <!-- LAYOUT 메뉴 레이아웃 (토큰 발급) -->
+            <LinearLayout
+                android:id="@+id/tokenMenuLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="10dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/token_menu_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/poppins_medium"
+                    android:includeFontPadding="false"
+                    android:text="토큰 발급"
+                    android:textColor="@drawable/selector_profile_menu_onclick"
+                    android:textSize="14dp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:src="@drawable/arrow_right_v2" />
+            </LinearLayout>
+            <!-- LAYOUT END 메뉴 레이아웃 (토큰 발급) -->
+
             <!-- LAYOUT 메뉴 레이아웃 (앱 정보) -->
             <LinearLayout
                 android:layout_width="match_parent"
