--- a/app/src/main/res/layout/fragment_report_info.xml
+++ b/app/src/main/res/layout/fragment_report_info.xml
@@ -7,6 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
         android:orientation="vertical"
         android:background="@color/white">
         <View
