FIXED : 예약 내역 좌석 개수 오류 수정

--- a/app/src/main/res/layout/sub_seat_gridview.xml
+++ b/app/src/main/res/layout/sub_seat_gridview.xml
@@ -95,6 +95,7 @@
 
         <!-- LAYOUT 실습실 추가 정보 레이아웃 -->
         <LinearLayout
+            android:id="@+id/infoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
